clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/at_most_one_mut_borrow/at_most_one_mut_borrow.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void use_mut(int *borrow p) {}
void use_immut(const int *borrow p) {}
T* owned safe_malloc<T>(T value);
void free_owned<T>(T* owned p);
void free(void*);

void test1() {
  int local = 42;
  int *borrow p1 = &mut local; 
  int *borrow p2 = &mut local;     // expected-note {{previous borrow is here}}
  use_mut(p1);                     // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
  use_mut(p2);
}

void test2() {
  int *owned oriPtr = safe_malloc<int>(0);
  int *borrow p1 = &mut *oriPtr; 
  int *borrow p2 = &mut *oriPtr;    // expected-note {{previous borrow is here}}
  use_mut(p1);                      // expected-error {{There should be at most one mutable borrow targeting to 'oriPtr' at the same time}}
  use_mut(p2);
  free_owned<int>(oriPtr);
}

void test3(int* oriPtr) {
  int *borrow p1 = &mut * oriPtr;
  int *borrow p2 = &mut * oriPtr; 
  use_mut(p1);  // error
  free(oriPtr);
}

void test4() {
  int local = 5;
  int *borrow p = &mut local;
  int *borrow p1 = &mut local; 
  const int *borrow p2 = &const *p;   // expected-note {{previous borrow is here}}
                                      // expected-note@-1 {{previous borrow is here}}
  use_mut(p);                         // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
  use_mut(p1);                        // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
  use_immut(p2);
}

void test5() {
  int local = 5;
  int *borrow p1 = &mut local;
  const int *borrow p2 = &const local;  // expected-note {{previous borrow is here}}
  use_mut(p1);                          // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
  use_immut(p2);
}

void test6(int* borrow p) {
  int local = 5;
  p = &mut local;
  const int *borrow p1 = &const *p;    // expected-note {{previous borrow is here}}
  use_mut(p);                          // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
  use_immut(p1);
}

void test7(int* borrow p) {
  int *borrow p1 = p;                 // expected-note {{previous borrow is here}}
  use_mut(p);                         // expected-error {{There should be at most one mutable borrow targeting to 'p' at the same time}}
  use_mut(p1);
}

void test8() {
  int arr[5];
  int *borrow p = &mut arr[0];
  int *borrow p1 = &mut arr[1];       // expected-note {{previous borrow is here}}
  use_mut(p);                         // expected-error {{There should be at most one mutable borrow targeting to 'arr' at the same time}}
  use_mut(p1);
}

void use_two_borrow(int *borrow p1, int *borrow p2) {}
void test9() {
  int local = 42;
  int *borrow p1 = &mut local;
  int *borrow p2 = &mut local;       // expected-note {{previous borrow is here}}
  use_two_borrow(p1, p2);            // expected-error {{There should be at most one mutable borrow targeting to 'local' at the same time}}
}

void test10() {
  int local = 5;
  int *borrow p1 = &mut local;
  const int *borrow p2 = &const local;     // expected-note {{previous borrow is here}}
  int *owned oriPtr = safe_malloc<int>(0);
  if (local > 0) {
    p1 = &mut *oriPtr; 
    p2 = &const *oriPtr;
  } else {
    p2 = &const *oriPtr;
    p1 = &mut *oriPtr;
  }
  use_mut(p1);                             // expected-error {{There should be at most one mutable borrow targeting to 'oriPtr' at the same time}}
  use_immut(p2);                           // expected-error {{Can not use 'p2' because expired}}
  free_owned<int>(oriPtr);
}

void test11() {
  int local = 5;
  int *borrow p1 = &mut local;
  const int *borrow p2 = &const local;     // expected-note {{previous borrow is here}}
  int *owned oriPtr = safe_malloc<int>(0);
  if (1) {
    p1 = &mut *oriPtr; 
    p2 = &const *oriPtr;
  } else {   //Dead code
    p1 = &mut *oriPtr;
    p2 = &const *oriPtr;
  }
  use_mut(p1);                             // expected-error {{There should be at most one mutable borrow targeting to 'oriPtr' at the same time}}
  use_immut(p2);
  free_owned<int>(oriPtr);
}

struct S {
    int a;
};

void test12() {
    struct S s = { .a = 5 };
    const struct S *borrow p1 = &const s;
    struct S *borrow p2 = &mut s;  // expected-note {{previous borrow is here}}
    struct S s1 = *p1;  // expected-error {{There should be at most one mutable borrow targeting to 's' at the same time}}
    struct S s2 = *p2;    
}

owned struct M {
public:
    int a;
};
void useM_mut(M * borrow m) {}
void useM_immut(const M * borrow m) {}

void test13() {
    int local = 1;
    M m = { .a = local };
    const M * borrow p1 = &const m;
    M * borrow p2 = &mut m;   // expected-note {{previous borrow is here}}
    useM_immut(p1);  // expected-error {{There should be at most one mutable borrow targeting to 'm' at the same time}}
    useM_mut(p2);
}

int main() {
  int local = 5;
  test1();
  test2();
  test3(&local);
  test4();
  test5();
  test6(&mut local);
  test7(&mut local);
  test8();
  test9();
  test10();
  test11();
  test12();
  test13();
  return 0;
}